Implement admin panel dialog and services

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Telegram Bot Settings
 BOT_TOKEN=1234567890:AABbccdDEeFfgghhi_ijjKkllmMNnoopPQqrr
 ADMIN_IDS=123456789
+ADMIN_PASSWORD=your_secret_password_here
 
 # PostgreSQL Database Settings
 DB_USER=postgres
