--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,12 @@ REDIS_USER=default
 REDIS_PASSWORD=
 REDIS_BOT_DATABASE=0
 REDIS_MIDDLEWARE_DATABASE=1
+
+# Webhook Settings (for production with Kubernetes)
+# The base URL for your bot, e.g., https://your.domain.name
+BASE_WEBHOOK_URL=https://your_domain_for_bot.com
+# The path for the webhook, e.g., /webhook/bot_token
+WEBHOOK_PATH=/webhook/your_secret_path
+# Web server settings
+WEB_SERVER_HOST=0.0.0.0
+WEB_SERVER_PORT=8080
