--- a/requirements.txt
+++ b/requirements.txt
@@ -4,102 +4,104 @@
 #
 #    pip-compile requirements.in
 #
-aiofiles==24.1.0
+aiofiles==23.2.1
     # via aiogram
-aiogram==3.22.0
+aiogram==3.10.0
     # via
     #   -r requirements.in
     #   aiogram-dialog
 aiogram-dialog==2.4.0
     # via -r requirements.in
-aiohappyeyeballs==2.6.1
-    # via aiohttp
-aiohttp==3.12.15
-    # via aiogram
-aiosignal==1.4.0
+aiohttp==3.9.5
+    # via
+    #   aiogram
+    #   -r requirements.in
+aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-apscheduler==3.11.0
+apscheduler==3.10.4
     # via -r requirements.in
-asyncpg==0.30.0
-    # via -r requirements.in
-attrs==25.3.0
+async-timeout==4.0.3
     # via aiohttp
-cachetools==5.5.2
+asyncpg==0.29.0
+    # via -r requirements.in
+attrs==23.2.0
+    # via aiohttp
+cachetools==5.3.3
     # via aiogram-dialog
-certifi==2025.8.3
+certifi==2024.7.4
     # via aiogram
+charset-normalizer==3.3.2
+    # via aiohttp
 colorama==0.4.6
     # via loguru
-environs==14.3.0
+environs==11.0.0
     # via -r requirements.in
-et-xmlfile==2.0.0
+et-xmlfile==1.1.0
     # via openpyxl
-frozenlist==1.7.0
+frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
-greenlet==3.2.4
+greenlet==3.0.3
     # via sqlalchemy
-idna==3.10
-    # via yarl
-jinja2==3.1.6
+idna==3.7
+    # via aiohttp
+jinja2==3.1.4
     # via aiogram-dialog
-loguru==0.7.3
+loguru==0.7.2
     # via -r requirements.in
 magic-filter==1.0.12
     # via aiogram
-markupsafe==3.0.2
+markupsafe==2.1.5
     # via jinja2
-marshmallow==4.0.0
+marshmallow==3.21.3
     # via environs
-multidict==6.6.4
+multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
-numpy==2.3.2
+numpy==1.26.4
     # via pandas
 openpyxl==3.1.5
     # via -r requirements.in
-pandas==2.3.1
-    # via -r requirements.in
-propcache==0.3.2
+packaging==24.1
     # via
-    #   aiohttp
-    #   yarl
-pydantic==2.11.7
+    #   marshmallow
+    #   pandas
+pandas==2.2.2
+    # via -r requirements.in
+pydantic==2.8.2
     # via aiogram
-pydantic-core==2.33.2
+pydantic-core==2.20.1
     # via pydantic
 python-dateutil==2.9.0.post0
     # via pandas
-python-dotenv==1.1.1
+python-dotenv==1.0.1
     # via environs
-pytz==2025.2
-    # via pandas
-redis==6.4.0
+pytz==2024.1
+    # via
+    #   apscheduler
+    #   pandas
+redis==5.0.7
     # via -r requirements.in
-six==1.17.0
+six==1.16.0
     # via python-dateutil
-sqlalchemy==2.0.43
+sqlalchemy==2.0.31
     # via -r requirements.in
-typing-extensions==4.14.1
+typing-extensions==4.12.2
     # via
     #   aiogram
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
     #   typing-inspection
-typing-inspection==0.4.1
+typing-inspection==0.9.0
     # via pydantic
-tzdata==2025.2
+tzdata==2024.1
     # via
+    #   apscheduler
     #   pandas
-    #   tzlocal
-tzlocal==5.3.1
-    # via apscheduler
-win32-setctime==1.2.0
-    # via loguru
-yarl==1.20.1
+yarl==1.9.4
     # via aiohttp
