--- a/requirements.in
+++ b/requirements.in
@@ -1,11 +1,11 @@
-aiogram>=3.5.0
-aiogram-dialog>=2.4.0
-sqlalchemy>=2.0.0
-asyncpg>=0.29.0
-redis>=5.0.0
-loguru>=0.7.0
-environs>=11.0.0
-pandas>=2.2.0
-openpyxl>=3.1.0
-apscheduler>=3.10.0
-aiohttp>=3.9.0
+aiogram
+aiogram-dialog
+sqlalchemy
+asyncpg
+redis
+loguru
+environs
+pandas
+openpyxl
+apscheduler
+aiohttp
