--- a/requirements.txt
+++ b/requirements.txt
@@ -4,104 +4,104 @@
 #
 #    pip-compile requirements.in
 #
-aiofiles==23.2.1
+aiofiles==24.1.0
     # via aiogram
-aiogram==3.10.0
+aiogram==3.22.0
     # via
     #   -r requirements.in
     #   aiogram-dialog
 aiogram-dialog==2.4.0
     # via -r requirements.in
-aiohttp==3.9.5
+aiohappyeyeballs==2.6.1
+    # via aiohttp
+aiohttp==3.12.15
     # via
-    #   aiogram
     #   -r requirements.in
-aiosignal==1.3.1
+    #   aiogram
+aiosignal==1.4.0
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-apscheduler==3.10.4
+apscheduler==3.11.0
     # via -r requirements.in
-async-timeout==4.0.3
-    # via aiohttp
-asyncpg==0.29.0
+asyncpg==0.30.0
     # via -r requirements.in
-attrs==23.2.0
+attrs==25.3.0
     # via aiohttp
-cachetools==5.3.3
+cachetools==5.5.2
     # via aiogram-dialog
-certifi==2024.7.4
+certifi==2025.8.3
     # via aiogram
-charset-normalizer==3.3.2
-    # via aiohttp
 colorama==0.4.6
     # via loguru
-environs==11.0.0
+environs==14.3.0
     # via -r requirements.in
-et-xmlfile==1.1.0
+et-xmlfile==2.0.0
     # via openpyxl
-frozenlist==1.4.1
+frozenlist==1.7.0
     # via
     #   aiohttp
     #   aiosignal
-greenlet==3.0.3
+greenlet==3.2.4
     # via sqlalchemy
-idna==3.7
-    # via aiohttp
-jinja2==3.1.4
+idna==3.10
+    # via yarl
+jinja2==3.1.6
     # via aiogram-dialog
-loguru==0.7.2
+loguru==0.7.3
     # via -r requirements.in
 magic-filter==1.0.12
     # via aiogram
-markupsafe==2.1.5
+markupsafe==3.0.2
     # via jinja2
-marshmallow==3.21.3
+marshmallow==4.0.0
     # via environs
-multidict==6.0.5
+multidict==6.6.4
     # via
     #   aiohttp
     #   yarl
-numpy==1.26.4
+numpy==2.3.2
     # via pandas
 openpyxl==3.1.5
     # via -r requirements.in
-packaging==24.1
-    # via
-    #   marshmallow
-    #   pandas
-pandas==2.2.2
+pandas==2.3.1
     # via -r requirements.in
-pydantic==2.8.2
+propcache==0.3.2
+    # via
+    #   aiohttp
+    #   yarl
+pydantic==2.11.7
     # via aiogram
-pydantic-core==2.20.1
+pydantic-core==2.33.2
     # via pydantic
 python-dateutil==2.9.0.post0
     # via pandas
-python-dotenv==1.0.1
+python-dotenv==1.1.1
     # via environs
-pytz==2024.1
-    # via
-    #   apscheduler
-    #   pandas
-redis==5.0.7
+pytz==2025.2
+    # via pandas
+redis==6.4.0
     # via -r requirements.in
-six==1.16.0
+six==1.17.0
     # via python-dateutil
-sqlalchemy==2.0.31
+sqlalchemy==2.0.43
     # via -r requirements.in
-typing-extensions==4.12.2
+typing-extensions==4.14.1
     # via
     #   aiogram
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
     #   typing-inspection
-typing-inspection==0.9.0
+typing-inspection==0.4.1
     # via pydantic
-tzdata==2024.1
+tzdata==2025.2
     # via
-    #   apscheduler
     #   pandas
-yarl==1.9.4
+    #   tzlocal
+tzlocal==5.3.1
+    # via apscheduler
+win32-setctime==1.2.0
+    # via loguru
+yarl==1.20.1
     # via aiohttp
